--- a/widget.ui
+++ b/widget.ui
@@ -192,6 +192,97 @@
     <string>Busy Slot 90</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>430</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Car_x</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>460</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Car_y</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="Car_x">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>430</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="Car_y">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>460</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ResetCarPos">
+   <property name="geometry">
+    <rect>
+     <x>510</x>
+     <y>400</y>
+     <width>101</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Reset car pos</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>490</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Car_phi</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="Car_phi">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>490</y>
+     <width>61</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+  </widget>
   <zorder>TargetSlot_4</zorder>
   <zorder>graphicsView</zorder>
   <zorder>FreeSlot</zorder>
@@ -206,8 +297,35 @@
   <zorder>BusySlot_2</zorder>
   <zorder>BusySlot_3</zorder>
   <zorder>BusySlot_4</zorder>
+  <zorder>label</zorder>
+  <zorder>label_2</zorder>
+  <zorder>Car_x</zorder>
+  <zorder>Car_y</zorder>
+  <zorder>ResetCarPos</zorder>
+  <zorder>label_3</zorder>
+  <zorder>Car_phi</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>ResetCarPos</sender>
+   <signal>clicked()</signal>
+   <receiver>Widget</receiver>
+   <slot>on_ResetCarPos_clicked()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>546</x>
+     <y>414</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>637</x>
+     <y>439</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>on_ResetCarPos_clicked()</slot>
+ </slots>
 </ui>
