--- a/widget.ui
+++ b/widget.ui
@@ -192,95 +192,95 @@
     <string>Busy Slot 90</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>430</y>
-     <width>67</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Car_x</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>460</y>
-     <width>67</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Car_y</string>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="Car_x">
-   <property name="geometry">
-    <rect>
-     <x>490</x>
-     <y>430</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="verticalScrollBarPolicy">
-    <enum>Qt::ScrollBarAlwaysOff</enum>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="Car_y">
-   <property name="geometry">
-    <rect>
-     <x>490</x>
-     <y>460</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="verticalScrollBarPolicy">
-    <enum>Qt::ScrollBarAlwaysOff</enum>
-   </property>
-  </widget>
   <widget class="QPushButton" name="ResetCarPos">
    <property name="geometry">
     <rect>
-     <x>510</x>
-     <y>400</y>
-     <width>101</width>
+     <x>630</x>
+     <y>460</y>
+     <width>131</width>
      <height>25</height>
     </rect>
    </property>
    <property name="text">
-    <string>Reset car pos</string>
+    <string>Change direction</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>490</y>
-     <width>67</width>
+     <x>600</x>
+     <y>430</y>
+     <width>101</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Car_phi</string>
+    <string>Car_direction</string>
    </property>
   </widget>
   <widget class="QTextEdit" name="Car_phi">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>490</y>
+     <x>710</x>
+     <y>430</y>
      <width>61</width>
      <height>20</height>
     </rect>
    </property>
    <property name="verticalScrollBarPolicy">
     <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>430</y>
+     <width>89</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Left</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>780</x>
+     <y>430</y>
+     <width>89</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Right</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_3">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>500</y>
+     <width>89</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Down</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_4">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>400</y>
+     <width>89</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Up</string>
    </property>
   </widget>
   <zorder>TargetSlot_4</zorder>
@@ -297,35 +297,105 @@
   <zorder>BusySlot_2</zorder>
   <zorder>BusySlot_3</zorder>
   <zorder>BusySlot_4</zorder>
-  <zorder>label</zorder>
-  <zorder>label_2</zorder>
-  <zorder>Car_x</zorder>
-  <zorder>Car_y</zorder>
   <zorder>ResetCarPos</zorder>
   <zorder>label_3</zorder>
   <zorder>Car_phi</zorder>
+  <zorder>pushButton</zorder>
+  <zorder>pushButton_2</zorder>
+  <zorder>pushButton_3</zorder>
+  <zorder>pushButton_4</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections>
   <connection>
+   <sender>pushButton</sender>
+   <signal>clicked()</signal>
+   <receiver>Widget</receiver>
+   <slot>move_left()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>556</x>
+     <y>451</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>529</x>
+     <y>484</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_3</sender>
+   <signal>clicked()</signal>
+   <receiver>Widget</receiver>
+   <slot>move_down()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>717</x>
+     <y>508</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>811</x>
+     <y>516</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_2</sender>
+   <signal>clicked()</signal>
+   <receiver>Widget</receiver>
+   <slot>move_right()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>797</x>
+     <y>448</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>781</x>
+     <y>472</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_4</sender>
+   <signal>clicked()</signal>
+   <receiver>Widget</receiver>
+   <slot>move_up()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>671</x>
+     <y>405</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>596</x>
+     <y>401</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
    <sender>ResetCarPos</sender>
    <signal>clicked()</signal>
    <receiver>Widget</receiver>
-   <slot>on_ResetCarPos_clicked()</slot>
+   <slot>on_Change_Direction_clicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>546</x>
-     <y>414</y>
+     <x>652</x>
+     <y>470</y>
     </hint>
     <hint type="destinationlabel">
-     <x>637</x>
-     <y>439</y>
+     <x>601</x>
+     <y>471</y>
     </hint>
    </hints>
   </connection>
  </connections>
  <slots>
   <slot>on_ResetCarPos_clicked()</slot>
+  <slot>view_click()</slot>
+  <slot>move_left()</slot>
+  <slot>move_down()</slot>
+  <slot>move_right()</slot>
+  <slot>move_up()</slot>
+  <slot>on_Change_Direction_clicked()</slot>
  </slots>
 </ui>
